navber is added

--- a/bootstarp-conceptual/index.html
+++ b/bootstarp-conceptual/index.html
@@ -11,7 +11,33 @@
 </head>
 
 <body>
- 
+    <header>
+        <nav class="sticky-top shadow-lg navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand d-flex align-content-center" href="#">
+                    <img src="./img/navbar-icon/image 12.png" width="40" height="40" class="d-inline-block align-text-top">
+                    <span class="ps-2 text-dark fs-3 fw-bolder">MyShop</span>
+                  </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 d-lg-flex flex-lg-row align-content-lg-center .d-sm-flex flex-sm-column ">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Feature</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled">Download</a>
+                  </li>
+                </ul>
+                <button type="button" class="btn btn-danger btn-lg fw-bolder">send feedbacks <i class="px-1 far fa-comment-dots"></i></button>
+              </div>
+            </div>
+          </nav>
+    </header>
    
 
 
