home section is added

--- a/bootstarp-conceptual/index.html
+++ b/bootstarp-conceptual/index.html
@@ -39,6 +39,23 @@
           </nav>
     </header>
    
+    <main>
+        <div id="home" class="container bg-info py-5">
+            <div class="row g-4">
+                <div class="col-12 col-lg-6 d-flex flex-column justify-content-center order-sm-1 ps-lg-5">
+                    <h1 class="heading-text">Showcase your <br> app beautifully</h1>
+                    <p class="fs-4">Leunch your mobile app landing page faster with this free, open source theme from Start Bootsttrap</p>
+                    <div class="d-flex ">
+                        <img src="./img/google-play-badge.svg" width="170px" height="50px" alt="">
+                        <img src="./img/app-store-badge.svg" width="170px" height="50px" alt="">
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6 d-flex justify-content-center align-items-center py-3 order-sm-2">
+                    <img src="./img/banner.png" alt="">
+                </div>
+            </div>
+        </div>
+    </main>
 
 
 
