--- a/bootstarp-conceptual/index.html
+++ b/bootstarp-conceptual/index.html
@@ -39,8 +39,9 @@
           </nav>
     </header>
    
+    <!-- home section -->
     <main>
-        <div id="home" class="container bg-info py-5">
+        <div id="home" class="container bg-info py-5 mb-4">
             <div class="row g-4">
                 <div class="col-12 col-lg-6 d-flex flex-column justify-content-center order-sm-1 ps-lg-5">
                     <h1 class="heading-text">Showcase your <br> app beautifully</h1>
@@ -56,6 +57,20 @@
             </div>
         </div>
     </main>
+
+
+    <main>
+        <div class="container bg-danger text-center py-5 mb-5">
+            <div class="row justify-content-center">
+                <div class="col-6">
+                    <h2>An intuitive solution to a common  problem that we all face, wrapped up in a single app</h2>
+                    <img src="./img/tnw-logo.svg" width="100px" height="70px" alt="">
+                </div>
+            </div>
+        </div>
+    </main>
+
+
 
 
 
