common commit added

--- a/bootstarp-conceptual/index.html
+++ b/bootstarp-conceptual/index.html
@@ -59,6 +59,8 @@
     </main>
 
 
+    <!-- company tags -->
+
     <main>
         <div class="container bg-danger text-center py-5 mb-5">
             <div class="row justify-content-center">
