--- a/bootstarp-conceptual/index.html
+++ b/bootstarp-conceptual/index.html
@@ -15,37 +15,43 @@
         <nav class="sticky-top shadow-lg navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand d-flex align-content-center" href="#">
-                    <img src="./img/navbar-icon/image 12.png" width="40" height="40" class="d-inline-block align-text-top">
+                    <img src="./img/navbar-icon/image 12.png" width="40" height="40"
+                        class="d-inline-block align-text-top">
                     <span class="ps-2 text-dark fs-3 fw-bolder">MyShop</span>
-                  </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 d-lg-flex flex-lg-row align-content-lg-center .d-sm-flex flex-sm-column ">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#home">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Feature</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled">Download</a>
-                  </li>
-                </ul>
-                <button type="button" class="btn btn-danger btn-lg fw-bolder">send feedbacks <i class="px-1 far fa-comment-dots"></i></button>
-              </div>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul
+                        class="navbar-nav ms-auto mb-2 mb-lg-0 d-lg-flex flex-lg-row align-content-lg-center .d-sm-flex flex-sm-column ">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Feature</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled">Download</a>
+                        </li>
+                    </ul>
+                    <button type="button" class="btn btn-danger btn-lg fw-bolder">send feedbacks <i
+                            class="px-1 far fa-comment-dots"></i></button>
+                </div>
             </div>
-          </nav>
+        </nav>
     </header>
-   
+
     <!-- home section -->
     <main>
         <div id="home" class="container bg-info py-5 mb-4">
             <div class="row g-4">
                 <div class="col-12 col-lg-6 d-flex flex-column justify-content-center order-sm-1 ps-lg-5">
                     <h1 class="heading-text">Showcase your <br> app beautifully</h1>
-                    <p class="fs-4">Leunch your mobile app landing page faster with this free, open source theme from Start Bootsttrap</p>
+                    <p class="fs-4">Leunch your mobile app landing page faster with this free, open source theme from
+                        Start Bootsttrap</p>
                     <div class="d-flex ">
                         <img src="./img/google-play-badge.svg" width="170px" height="50px" alt="">
                         <img src="./img/app-store-badge.svg" width="170px" height="50px" alt="">
@@ -65,7 +71,7 @@
         <div class="container bg-danger text-center py-5 mb-5">
             <div class="row justify-content-center">
                 <div class="col-6">
-                    <h2>An intuitive solution to a common  problem that we all face, wrapped up in a single app</h2>
+                    <h2>An intuitive solution to a common problem that we all face, wrapped up in a single app</h2>
                     <img src="./img/tnw-logo.svg" width="100px" height="70px" alt="">
                 </div>
             </div>
@@ -73,8 +79,61 @@
     </main>
 
 
+    <!-- features -->
 
+    <main>
+        <div class="container">
+            <div class="row  justify-content-center g-5">
+                <div class="col-lg-5 bg-success d-flex justify-content-center align-items-center col-md-12">
+                    <img src="./img/phone.png" alt="">
+                </div>
+                <div class="col-lg-7 col-md-12">
+                    <div class="row justify-content-center g-5">
+                        <div class="col-lg-6">
+                            <div class="d-flex my-2 border-bottom border-danger border-3 shadow p-3 flex-column align-items-center border-end">
+                                <div>
+                                    <i class="fas fa-mobile icon-font"></i>
+                                </div>
+                                <h3 class="text-center my-3">Device Mockups</h3>
+                                <p class="text-center">Ready to use HTML/CSS mockups, no Photoshop required!</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="d-flex my-2 border-bottom border-end border-danger border-3 shadow p-3 flex-column align-items-center">
+                                <div>
+                                    <i class="fas fa-mobile icon-font"></i>
+                                </div>
+                                <h3 class="text-center my-3">Device Mockups</h3>
+                                <p class="text-center">Ready to use HTML/CSS mockups, no Photoshop required!</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="d-flex my-2 border-bottom border-end border-danger border-3 shadow p-3 flex-column align-items-center">
+                                <div>
+                                    <i class="fas fa-mobile icon-font"></i>
+                                </div>
+                                <h3 class="text-center my-3">Device Mockups</h3>
+                                <p class="text-center">Ready to use HTML/CSS mockups, no Photoshop required!</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="d-flex my-2 border-bottom border-end border-danger border-3 shadow p-3 flex-column align-items-center">
+                                <div>
+                                    <i class="fas fa-mobile icon-font"></i>
+                                </div>
+                                <h3 class="text-center my-3">Device Mockups</h3>
+                                <p class="text-center">Ready to use HTML/CSS mockups, no Photoshop required!</p>
+                            </div>
+                        </div>
+                        
+                    </div>
 
+                </div>
+            </div>
+        </div>
+    </main>
+
+    
 
     <script src="https://kit.fontawesome.com/f0ecdff264.js" crossorigin="anonymous"></script>
     <script src="./bootstraps/bootstrap.bundle.min.js"></script>
