Offers section is  added

--- a/bootstarp-conceptual/index.html
+++ b/bootstarp-conceptual/index.html
@@ -90,12 +90,13 @@
                 <div class="col-lg-7 col-md-12">
                     <div class="row justify-content-center g-5">
                         <div class="col-lg-6">
-                            <div class="d-flex my-2 border-bottom border-danger border-3 shadow p-3 flex-column align-items-center border-end">
+                            <div class="d-flex my-2 border-bottom border-danger border-3 shadow p-3 flex-column align-items-center border-end placeholder-glow">
                                 <div>
                                     <i class="fas fa-mobile icon-font"></i>
                                 </div>
                                 <h3 class="text-center my-3">Device Mockups</h3>
                                 <p class="text-center">Ready to use HTML/CSS mockups, no Photoshop required!</p>
+                                <span class="placeholder bg-success col-12"></span>
                             </div>
                         </div>
                         <div class="col-lg-6">
@@ -133,6 +134,21 @@
         </div>
     </main>
 
+    <!-- Offers -->
+    
+    <main>
+        <div class="container py-5 bg-info">
+            <div class="row">
+                <div class="col-lg-7 d-flex flex-column justify-content-center ">
+                    <h1>Enter a new age of web design</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, impedit nihil id adipisci dolore ea quisquam reiciendis quos corrupti nobis et, distinctio ipsum voluptate provident iste sit, sed consequatur exercitationem.</p>
+                </div>
+                <div class="col-lg-5 d-flex justify-content-center align-items-center">
+                    <img src="./img/web-design.png" class="w-100 rounded-circle " alt="">
+                </div>
+            </div>
+        </div>
+    </main>
     
 
     <script src="https://kit.fontawesome.com/f0ecdff264.js" crossorigin="anonymous"></script>
