--- a/bootstarp-conceptual/index.html
+++ b/bootstarp-conceptual/index.html
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 d-flex justify-content-center align-items-center py-3 order-sm-2">
-                    <img src="./img/banner.png" alt="">
+                    <img src="./img/banner.png"  alt="">
                 </div>
             </div>
         </div>
@@ -150,6 +150,21 @@
         </div>
     </main>
     
+
+    <!-- download sectio -->
+
+    <main class="container-fliud bg-danger download">
+        <div class="row ">
+            <div class="col-md-6 col-12 d-flex align-items-center">
+                <div class="d-flex flex-column"></div>
+                <h1>Stop waiting. Start building.</h1>
+                <button type="button" class="btn btn-outline-light btn-lg">Download Now</button>
+            </div>
+        </div>
+    </main>
+
+
+    <!--  -->
 
     <script src="https://kit.fontawesome.com/f0ecdff264.js" crossorigin="anonymous"></script>
     <script src="./bootstraps/bootstrap.bundle.min.js"></script>
