--- a/bootstarp-conceptual/index.html
+++ b/bootstarp-conceptual/index.html
@@ -182,6 +182,13 @@
         </div>
     </main>
 
+
+    <!-- footer section -->
+
+    <footer class="bg-dark text-light py-2 text-center">
+        <p> <i class="fas fa-copyright"></i> Your Website 2021. All Rights Reserved.</p>
+    </footer>
+
     <script src="https://kit.fontawesome.com/f0ecdff264.js" crossorigin="anonymous"></script>
     <script src="./bootstraps/bootstrap.bundle.min.js"></script>
 </body>
