--- a/bootstarp-conceptual/index.html
+++ b/bootstarp-conceptual/index.html
@@ -157,14 +157,15 @@
     </main>
 
 
-    <!-- download sectio -->
+    <!-- download section -->
 
-    <main class="container-fliud bg-danger download">
-        <div class="row ">
+    <main class="container-fliud download">
+        <div class="row download-text">
             <div class="col-md-6 col-12 d-flex align-items-center">
-                <div class="d-flex flex-column"></div>
-                <h1>Stop waiting. Start building.</h1>
-                <button type="button" class="btn btn-outline-light btn-lg">Download Now</button>
+                <div class="d-flex flex-column p-4">
+                    <h1>Stop waiting Start building.</h1>
+                    <button type="button" class=" w-50 btn btn-outline-light btn-lg">Download Now</button>
+                </div>
             </div>
         </div>
     </main>
