--- a/bootstarp-conceptual/index.html
+++ b/bootstarp-conceptual/index.html
@@ -174,11 +174,11 @@
     <!-- get app section  -->
 
     <main class="container-fluid bg-primary py-5 d-flex align-items-center justify-content-center">
-        <div>
+        <div class="d-flex flex-column align-items-center">
             <h1>Get the app now !</h1>
-            <div class="d-flex ">
-                <img src="./img/google-play-badge.svg" width="170px" height="50px" alt="">
-                <img src="./img/app-store-badge.svg" width="170px" height="50px" alt="">
+            <div class="d-flex flex-md-row flex-column">
+                <img class="my-1 mx-md-1" src="./img/google-play-badge.svg" width="170px" height="50px" alt="">
+                <img class="my-1 mx-md-1" src="./img/app-store-badge.svg" width="170px" height="50px" alt="">
             </div>
         </div>
     </main>
@@ -186,8 +186,9 @@
 
     <!-- footer section -->
 
-    <footer class="bg-dark text-light py-2 text-center">
-        <p> <i class="fas fa-copyright"></i> Your Website 2021. All Rights Reserved.</p>
+    <footer class="bg-dark text-light py-4 text-center">
+        <p class="m-0"> <i class="fas fa-copyright"></i> Your Website 2021. All Rights Reserved.</p>
+        <p class="m-0">md kamruzzaman</p>
     </footer>
 
     <script src="https://kit.fontawesome.com/f0ecdff264.js" crossorigin="anonymous"></script>
