bg and font color update

--- a/bootstarp-conceptual/index.html
+++ b/bootstarp-conceptual/index.html
@@ -46,10 +46,10 @@
 
     <!-- home section -->
     <main>
-        <div id="home" class="container bg-info py-5 mb-4">
+        <div id="home" class="container py-5 mb-4">
             <div class="row g-4">
                 <div class="col-12 col-lg-6 d-flex flex-column justify-content-center order-sm-1 ps-lg-5">
-                    <h1 class="heading-text">Showcase your <br> app beautifully</h1>
+                    <h1 class="large-text">Showcase your <br> app beautifully</h1>
                     <p class="fs-4">Leunch your mobile app landing page faster with this free, open source theme from
                         Start Bootsttrap</p>
                     <div class="d-flex ">
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 d-flex justify-content-center align-items-center py-3 order-sm-2">
-                    <img src="./img/banner.png" alt="">
+                    <img class="img-fliud" src="./img/banner.png" alt="">
                 </div>
             </div>
         </div>
@@ -68,10 +68,10 @@
     <!-- company tags -->
 
     <main>
-        <div class="container bg-danger text-center py-5 mb-5">
+        <div class="container-fluid text-center py-5 mb-5 company-image">
             <div class="row justify-content-center">
                 <div class="col-6">
-                    <h2>An intuitive solution to a common problem that we all face, wrapped up in a single app</h2>
+                    <h2 class="text-light">An intuitive solution to a common problem that we all face, wrapped up in a single app</h2>
                     <img src="./img/tnw-logo.svg" width="100px" height="70px" alt="">
                 </div>
             </div>
@@ -83,9 +83,9 @@
 
     <main>
         <div class="container">
-            <div class="row  justify-content-center g-5">
-                <div class="col-lg-5 bg-success d-flex justify-content-center align-items-center col-md-12">
-                    <img src="./img/phone.png" alt="">
+            <div class="row  justify-content-center">
+                <div class="col-lg-5 d-flex justify-content-center align-items-center col-md-12">
+                    <img class="img-fliud" src="./img/phone.png" alt="">
                 </div>
                 <div class="col-lg-7 col-md-12">
                     <div class="row justify-content-center g-5">
@@ -141,11 +141,11 @@
     <!-- Offers -->
 
     <main>
-        <div class="container py-5 bg-info">
+        <div class="container-fluid py-5">
             <div class="row">
                 <div class="col-lg-7 d-flex flex-column justify-content-center ">
-                    <h1>Enter a new age of web design</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, impedit nihil id adipisci
+                    <h1 class="large-text">Enter a new age of web design</h1>
+                    <p class="fw-bold">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, impedit nihil id adipisci
                         dolore ea quisquam reiciendis quos corrupti nobis et, distinctio ipsum voluptate provident iste
                         sit, sed consequatur exercitationem.</p>
                 </div>
@@ -163,7 +163,7 @@
         <div class="row download-text">
             <div class="col-md-6 col-12 d-flex align-items-center">
                 <div class="d-flex flex-column p-4">
-                    <h1>Stop waiting Start building.</h1>
+                    <h1 class="large-text">Stop waiting Start building.</h1>
                     <button type="button" class=" w-50 btn btn-outline-light btn-lg">Download Now</button>
                 </div>
             </div>
