font awasome update

--- a/bootstarp-conceptual/index.html
+++ b/bootstarp-conceptual/index.html
@@ -93,20 +93,21 @@
                             <div
                                 class="d-flex my-2 border-bottom border-danger border-3 shadow p-3 flex-column align-items-center border-end placeholder-glow">
                                 <div>
-                                    <i class="fas fa-mobile icon-font"></i>
+                                    <i class="fab fa-accusoft icon-font"></i>
                                 </div>
-                                <h3 class="text-center my-3">Device Mockups</h3>
-                                <p class="text-center">Ready to use HTML/CSS mockups, no Photoshop required!</p>
-                                <span class="placeholder bg-success col-12"></span>
+                                <h3 class="text-center my-3">Accusoft</h3>
+                                <p class="text-center"> accusoft is always, our 
+                                    patner. it's a great owner.
+                                </p>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div
                                 class="d-flex my-2 border-bottom border-end border-danger border-3 shadow p-3 flex-column align-items-center">
                                 <div>
-                                    <i class="fas fa-mobile icon-font"></i>
+                                    <i class="fas fa-american-sign-language-interpreting icon-font"></i>
                                 </div>
-                                <h3 class="text-center my-3">Device Mockups</h3>
+                                <h3 class="text-center my-3">Language Enrich</h3>
                                 <p class="text-center">Ready to use HTML/CSS mockups, no Photoshop required!</p>
                             </div>
                         </div>
@@ -114,10 +115,10 @@
                             <div
                                 class="d-flex my-2 border-bottom border-end border-danger border-3 shadow p-3 flex-column align-items-center">
                                 <div>
-                                    <i class="fas fa-mobile icon-font"></i>
+                                    <i class="fab fa-battle-net icon-font"></i>
                                 </div>
-                                <h3 class="text-center my-3">Device Mockups</h3>
-                                <p class="text-center">Ready to use HTML/CSS mockups, no Photoshop required!</p>
+                                <h3 class="text-center my-3">Battle Best</h3>
+                                <p class="text-center">Ready battle to over world , we are great to reach it!</p>
                             </div>
                         </div>
                         <div class="col-lg-6">
