--- a/app-seller/index.html
+++ b/app-seller/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <header>
-        <nav class="sticky-top shadow-lg navbar navbar-expand-lg navbar-light bg-light">
+    <header class="navigation sticky-top py-2 bg-light shadow">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand d-flex align-content-center" href="#">
                     <img src="./img/navbar-icon/image 12.png" width="40" height="40"
